# snake-game

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: game.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: game.rs  lib.rs  main.rs
