[package]
name = "snake-game"
version = "1.0.0"
edition = "2021"

[lib]
name = "snake_game_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "snake-game"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
